--- a/freq.cabal
+++ b/freq.cabal
@@ -28,8 +28,10 @@ source-repository head
 library
     hs-source-dirs:        src
     build-depends:         base       >= 4.9 && < 5.0
+                         , array 
                          , bytestring 
                          , containers 
+                         , hmatrix
     exposed-modules:       Freq
     default-language:      Haskell2010
                        
