--- a/freq.cabal
+++ b/freq.cabal
@@ -30,6 +30,7 @@ library
     build-depends:         base       >= 4.9 && < 5.0
                          , bytestring 
                          , containers 
+                         , primitive >= 0.6.1
     exposed-modules:       Freq
     default-language:      Haskell2010
                        
