--- a/freq.cabal
+++ b/freq.cabal
@@ -26,15 +26,14 @@ source-repository head
 ---------------------------------------------------------------------
 
 library
-    hs-source-dirs:        src
     build-depends:         base       >= 4.9 && < 5.0
                          , bytestring 
                          , containers 
                          , primitive >= 0.6.1
-    exposed-modules:       Freq
+    exposed-modules:       Data.Freq
     default-language:      Haskell2010
                        
-executable freq
+executable freq-train
     hs-source-dirs:        app
     build-depends:         base, freq, bytestring, containers
     main-is:               Main.hs
