--- a/freq.cabal
+++ b/freq.cabal
@@ -30,7 +30,9 @@ library
                          , bytestring 
                          , containers 
                          , primitive >= 0.6.1
-    exposed-modules:       Data.Freq
+    exposed-modules:       Freq.Digram
+                           Freq.Digram.Builder 
+                           Freq.Digram.Internal 
     default-language:      Haskell2010
                        
 executable freq-train
