--- a/freq.cabal
+++ b/freq.cabal
@@ -26,12 +26,14 @@ source-repository head
 ---------------------------------------------------------------------
 
 library
+    hs-source-dirs:        src 
     build-depends:         base       >= 4.9 && < 5.0
                          , bytestring 
                          , containers 
-                         , primitive >= 0.6.1
-    exposed-modules:       Freq.Digram
-                           Freq.Digram.Internal 
+                         , gauge
+                         , primitive-checked >= 0.6.1
+    exposed-modules:       Freq
+                           Freq.Internal 
     default-language:      Haskell2010
 
 test-suite test
@@ -46,6 +48,18 @@ test-suite test
     , freq
     , hedgehog 
   default-language: Haskell2010
+
+benchmark bench
+  type: exitcode-stdio-1.0
+  build-depends:
+      base
+    , bytestring
+    , containers
+    , freq
+    , gauge
+  default-language: Haskell2010
+  hs-source-dirs: bench
+  main-is: Main.hs
 
 executable freq-train
     hs-source-dirs:        app
