--- a/freq.cabal
+++ b/freq.cabal
@@ -33,6 +33,7 @@ library
     build-depends:         base       >= 4.9 && < 5.0
                          , bytestring 
                          , containers 
+                         , deepseq 
                          , primitive >= 0.6.1
     exposed-modules:       Freq
                            Freq.Internal 
